Fix z-index bug fix red heart

--- a/Css/style.css
+++ b/Css/style.css
@@ -118,17 +118,18 @@ main{
     align-items: center;
 }
 
-/* .img1 .img2 .img3 .img4 .img5 .img6{
+.img1, .img2, .img3, .img4, .img5, .img6{
     position: sticky;
-    z-index: 50;
-} */
+    z-index: 0;
+}
 
 .img1b, .img2b, .img3b, .img4b, .img5b, .img6b{ 
-   display: none;
+   position: absolute;
+   z-index: -1;
 }
 
 
-.article:hover{
+/* .article:hover{
 
     .img1, .img2, .img3, .img4, .img5, .img6{
         display: none;
@@ -139,18 +140,31 @@ main{
         display: block;
         
     }
-    
+     
+ }  */
 
-
-
-
-
-}
 
 .article:hover{
-    .heart{
-        color: #ff0000;
+
+    .img1, .img2, .img3, .img4, .img5, .img6{
+        position: sticky;
+        z-index: -1;
     }
+
+
+
+    .img1b, .img2b, .img3b, .img4b, .img5b, .img6b{ 
+        z-index: 0;
+     }
+     
+    
+}
+
+
+.heart:hover{
+    
+        color: #ff0000;
+
 }
 
 .heart{
